# codingwatch

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  docker-compose.yml  install.sh  prometheus.yml  pyproject.toml  schema.json  setup.sh
.claude/: settings.json
.claude/agents/: metrics-reviewer.md  security-reviewer.md
.claude/skills/collector-dev/: SKILL.md
.claude/skills/db-migrate/: SKILL.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
collector/: Dockerfile  app.py  config.py  db.py  models.py  otlp.py  prometheus.py  requirements.txt  test_app.py  test_db.py  test_otlp.py  test_prometheus.py
dashboard/: index.html
statusline/: statusline.sh
